Server communication, Get My Reports
