# app/reports/models.go
@@ -23,6 +23,7 @@ type ReportsResponse struct {
 
 type GetReportsRequest struct {
 	UserID int `json:"-"`
+	Terms []string `json:"terms"`
 }
 
 type IDRequest struct {
@@ -81,10 +82,12 @@ type ArticleMetadata struct {
 type Analysis struct {
 	AnalysisResults AnalysisResults `json:"analysis_results"`
 	ArticleMetadata ArticleMetadata `json:"article_metadata"`
+	
 }
 
 type GetReportsResponse struct {
-	Analyses []Analysis `json:"analyses"`
+	Analyses       []Analysis `json:"analyses"`
+	TotalArticles  int        `json:"total_articles"`
 }
 
 
@@ -96,4 +99,57 @@ type Articles struct {
 	Content       string `json:"content"`
 	PublishedDate time.Time `json:"published_date"`
 	ScrapedAt     time.Time `json:"scraped_at"`
+}
+
+// Define the structure for the JSON response
+type GetAnalyzesResponse struct {
+	Query   Query   `json:"query"`
+	Results Results `json:"results"`
+}
+
+type Query struct {
+	SearchTerms []string `json:"search_terms"`
+}
+
+type Results struct {
+	Articles     []Article `json:"articles"`
+	TotalArticles int       `json:"total_articles"`
+}
+
+type Article struct {
+	ArticleID       int               `json:"article_id"`
+	ArticleSummary  string            `json:"article_summary"`
+	Entities        map[string]Entity `json:"entities"`
+	EntitySentimentScores []float64   `json:"entity_sentiment_scores"`
+	PublishedDate   time.Time         `json:"published_date"`
+	ScrapedAt       time.Time         `json:"scraped_at"`
+	Title           string            `json:"title"`
+	TopicSentimentScores []float64    `json:"topic_sentiment_scores"`
+	Topics          map[string]Topic  `json:"topics"`
+	URL             string            `json:"url"`
+}
+
+type Entity struct {
+	Name           string   `json:"name"`
+	RelatedTopics  []string `json:"related_topics"`
+	SentimentLabel string   `json:"sentiment_label"`
+	SentimentScores []float64 `json:"sentiment_scores"`
+}
+
+type Topic struct {
+	Name            string   `json:"name"`
+	RelatedEntities []string `json:"related_entities"`
+	SentimentLabel  string   `json:"sentiment_label"`
+	SentimentScore  float64  `json:"sentiment_score"`
+}
+
+// New models for GetMyReports response
+type EntityAnalysis struct {
+    EntityName     string     `json:"entity_name"`
+    Analyses       []Analysis `json:"analyses"`
+    TotalArticles  int        `json:"total_articles"`
+}
+
+type GetMyReportsResponse struct {
+    Entities []EntityAnalysis `json:"entities"`
 }
