# docs/swagger.json
@@ -352,13 +352,20 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "terms",
+                        "name": "terms",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/reports.ReportsResponse"
+                            "$ref": "#/definitions/reports.GetReportsResponse"
                         }
                     }
                 }
@@ -403,6 +410,38 @@
                 }
             }
         },
+        "/api/reports/my-reports": {
+            "get": {
+                "description": "Validates user id. Gets all reports made by the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Get My Reports",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization Key (e.g Bearer key)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/reports.GetMyReportsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/reports/{id}": {
             "get": {
                 "description": "Validates id and user id. Gets report by id",
@@ -415,7 +454,6 @@
                 "tags": [
                     "Reports"
                 ],
-                "summary": "Get Report By ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -597,6 +635,9 @@
         "auth.LoginResponse": {
             "type": "object",
             "properties": {
+                "sessionToken": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
                 },
@@ -727,6 +768,17 @@
                 "name": {
                     "type": "string"
                 },
+                "relatedTopics": {
+                    "description": "Serialize to JSON",
+                    "type": "string"
+                },
+                "sentimentLabel": {
+                    "type": "string"
+                },
+                "sentimentScores": {
+                    "description": "Serialize to JSON",
+                    "type": "string"
+                },
                 "type": {
                     "type": "string"
                 },
@@ -774,6 +826,126 @@
                 }
             }
         },
+        "reports.Analysis": {
+            "type": "object",
+            "properties": {
+                "analysis_results": {
+                    "$ref": "#/definitions/reports.AnalysisResults"
+                },
+                "article_metadata": {
+                    "$ref": "#/definitions/reports.ArticleMetadata"
+                }
+            }
+        },
+        "reports.AnalysisEntity": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "related_topics": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "sentiment_label": {
+                    "type": "string"
+                },
+                "sentiment_score": {
+                    "type": "number"
+                }
+            }
+        },
+        "reports.AnalysisResults": {
+            "type": "object",
+            "properties": {
+                "entities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.AnalysisEntity"
+                    }
+                },
+                "topics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.AnalysisTopic"
+                    }
+                }
+            }
+        },
+        "reports.AnalysisTopic": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "related_entities": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "sentiment_label": {
+                    "type": "string"
+                },
+                "sentiment_score": {
+                    "type": "number"
+                }
+            }
+        },
+        "reports.ArticleMetadata": {
+            "type": "object",
+            "properties": {
+                "article_summary": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "published_date": {
+                    "type": "string"
+                },
+                "scraped_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "url_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "reports.Articles": {
+            "type": "object",
+            "properties": {
+                "config_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "published_date": {
+                    "type": "string"
+                },
+                "scraped_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "url_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "reports.CreateReportRequest": {
             "type": "object",
             "properties": {
@@ -785,6 +957,48 @@
                 },
                 "subject": {
                     "type": "string"
+                }
+            }
+        },
+        "reports.EntityAnalysis": {
+            "type": "object",
+            "properties": {
+                "analyses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.Analysis"
+                    }
+                },
+                "entity_name": {
+                    "type": "string"
+                },
+                "total_articles": {
+                    "type": "integer"
+                }
+            }
+        },
+        "reports.GetMyReportsResponse": {
+            "type": "object",
+            "properties": {
+                "entities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.EntityAnalysis"
+                    }
+                }
+            }
+        },
+        "reports.GetReportsResponse": {
+            "type": "object",
+            "properties": {
+                "analyses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.Analysis"
+                    }
+                },
+                "total_articles": {
+                    "type": "integer"
                 }
             }
         },
@@ -830,6 +1044,12 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/users.User"
+                },
+                "userID": {
+                    "type": "integer"
                 }
             }
         },
@@ -847,22 +1067,17 @@
         "reports.ReportResponse": {
             "type": "object",
             "properties": {
+                "articles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reports.Articles"
+                    }
+                },
                 "report": {
                     "$ref": "#/definitions/reports.Report"
                 },
                 "userId": {
                     "type": "integer"
-                }
-            }
-        },
-        "reports.ReportsResponse": {
-            "type": "object",
-            "properties": {
-                "reports": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/reports.Report"
-                    }
                 }
             }
         },
@@ -930,6 +1145,56 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "users.User": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "avatarImgKey": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "verifiedEmail": {
+                    "type": "boolean"
                 }
             }
         },
